<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single" >
    <item
        android:id="@+id/overview"
        android:orderInCategory="1"
        android:title="@string/overview"
        android:icon="@drawable/ic_home_black_24dp" />
    <item
        android:id="@+id/message"
        android:orderInCategory="2"
        android:title="@string/message"
        android:icon="@drawable/ic_message_black_24dp"/>

    <item
        android:id="@+id/notifications"
        android:orderInCategory="3"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications_black_24dp"/>
    <item
        android:id="@+id/map"
        android:orderInCategory="4"
        android:title="@string/map"
        android:icon="@drawable/ic_location_on_black_24dp"/>
    <item
        android:id="@+id/search"
        android:orderInCategory="5"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black_24dp"/>
    <item
        android:id="@+id/notebook"
        android:orderInCategory="6"
        android:title="@string/notebook"
        android:icon="@drawable/ic_person_black_24dp"/>
    <item
        android:id="@+id/invites"
        android:orderInCategory="7"
        android:title="@string/invites"
        android:icon="@drawable/ic_whatshot_black_24dp"/>
    <item
        android:id="@+id/fights"
        android:orderInCategory="8"
        android:title="@string/fights"
        android:icon="@drawable/ic_flag_black_24dp"/>
    <item
        android:id="@+id/videos"
        android:orderInCategory="9"
        android:title="@string/videos"
        android:icon="@drawable/ic_local_movies_black_24dp"/>
    </group>




</menu>